# FAST

./: .gitignore  Alignment.hh  AlignmentWrite.cc  Alphabet.cc  Alphabet.hh  CMakeLists.txt  CyclicSubsetSeed.cc  DatabaseThread.cpp  DatabaseThread.hh  DatabaseVolume.cpp  DatabaseVolume.hh  DatabaseWriter.h  GeneticCode.cc  Globals.hh  LambdaCalculator.cc  LastalArguments.cc  LastalArguments.hh  LastdbArguments.cc  LastdbArguments.hh  Makefile  MultiSequence.cc  MultiSequence.hh  MultiSequenceQual.cc  README.md  ScoreMatrix.cc  SubsetSuffixArray.cc  SubsetSuffixArray.hh  SubsetSuffixArraySort.cc  SubsetSuffixArraySort.hh  TODO  externalsort.cc  externalsort.hh  heapsort.cc  heapsort.hh  lastal.cc  lastal.hh  lastdb.cc  lastdb.hh  lastex.cc  lastex.hh  (+8 more)
src/: Alignment.cc  Alignment.hh  AlignmentPot.cc  AlignmentPot.hh  AlignmentWrite.cc  Alphabet.cc  Alphabet.hh  Centroid.cc  Centroid.hh  CyclicSubsetSeed.cc  CyclicSubsetSeed.hh  DatabaseThread.cpp  DatabaseThread.hh  DatabaseVolume.cpp  DatabaseVolume.hh  DatabaseWriter.cpp  DatabaseWriter.h  DiagonalTable.cc  DiagonalTable.hh  GappedXdropAligner.cc  GappedXdropAligner.hh  GappedXdropAligner2qual.cc  GappedXdropAligner3frame.cc  GappedXdropAligner3framePssm.cc  GappedXdropAlignerInl.hh  GappedXdropAlignerPssm.cc  GeneralizedAffineGapCosts.cc  GeneralizedAffineGapCosts.hh  GeneticCode.cc  GeneticCode.hh  Globals.hh  LambdaCalculator.cc  LambdaCalculator.hh  LastEvaluer.cc  LastEvaluer.hh  LastalArguments.cc  LastalArguments.hh  LastdbArguments.cc  LastdbArguments.hh  LastexArguments.cc  (+65 more)
